--- a/app/about.html
+++ b/app/about.html
@@ -21,7 +21,7 @@
 	<div class="meta row">
 		<div class="four columns offset-by-eight">
 			<div class="meta-content">
-				<p>The Right to Heal: Saturday, July 16th 2013</p>
+				<p> 7pm Saturday, July 16th 2013</p>
 			</div>
 		</div>
 	</div>
