--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
 	<div class="meta row">
 		<div class="four columns offset-by-eight">
 			<div class="meta-content">
-				<p>The Right to Heal: Saturday, July 16th 2013</p>
+				<p>7pm Saturday, July 16th 2013</p>
 			</div>
 		</div>
 	</div>
@@ -52,16 +52,22 @@
 	</div>
 
 	<div class="body row">
-		<div class="twelve columns">
+		<div class="nine columns">
 			<div class="video">
-					<iframe src="http://player.vimeo.com/video/59388957" width="700" height="350" framexborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+					<iframe src="http://player.vimeo.com/video/59388957" width="700" height="425" framexborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 			</div>
-			<div class="home-text">
-				<p class="home-text"><span class="strong">The Right to Heal</span>
+			</div>
+			<div class="three columns">
+				<div class="vert-pad"></div>
+				<p class="title">Global Health Film Festival</p>
+				<br>
+				<p class="home-text"><span class="strong">'The Right to Heal' Premier</span>
+				<br>
 				Saturday July 16th, 2013
-				Venue Goes Here
-				</div>
-		</div>
+				<br>
+				Doors open 7pm
+			</div>
+		
 		<div class="twelve columns">
 		</div>
 	</div>
