--- a/app/partners.html
+++ b/app/partners.html
@@ -56,16 +56,21 @@
 				<div class="row">
 					<div class="twelve columns">
 						<ul class="nav sub-nav">
-							<li class="nav-item active">
+							<li class="nav-item">
 								<a href="who.html">Who</a>
 							</li>
 							<li class="nav-item">
 								<a href="why.html">Why</a>
 							</li>
-							<li class="nav-item">
+							<li class="nav-item active">
 								<a href="partners.html">Partners</a>
 							</li>
 						</ul>
+					</div>
+				</div>
+				<div class="row">
+					<div class="twelve columns">
+						<p class="title">Our Partners</p>
 					</div>
 				</div>
 				<div class="row vert-pad">
@@ -73,9 +78,10 @@
 						<div class="partner-image">
 							<img src="http://placehold.it/200x150&text=image+two+here"></div>
 					</div>
+					<br>
 					<div class="nine columns">
 						<div class="partner-text">
-							<p class="strong long-text">IGOT</p>
+							<p class="name">IGOT</p>
 							<p class="long-text">
 								This is the description of partner one.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 							</p>
@@ -87,9 +93,10 @@
 						<div class="partner-image">
 							<img src="http://placehold.it/200x150&text=image+two+here"></div>
 					</div>
+					<br>
 					<div class="nine columns">
 						<div class="partner-text">
-							<p class="strong long-text">GPAS</p>
+							<p class="name">GPAS</p>
 							<p class="long-text">
 								This is the description of partner two.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 							</p>
@@ -101,9 +108,10 @@
 								<div class="partner-image">
 									<img src="http://placehold.it/200x150&text=image+two+here"></div>
 							</div>
+							<br>
 							<div class="nine columns">
 								<div class="partner-text">
-									<p class="strong long-text">Own2Feet</p>
+									<p class="name">Own2Feet</p>
 									<p class="long-text">
 										This is the description of partner three.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 									</p>
@@ -116,9 +124,10 @@
 									<img src="http://placehold.it/200x150&text=image+two+here">
 								</div>
 							</div>
+							<br>
 							<div class="nine columns">
 								<div class="partner-text">
-									<p class="strong long-text"> ALittle4Alot
+									<p class="name"> ALittle4Alot
 									</p>
 									<p class="long-text">
 										This is the description of partner four.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
