--- a/app/who.html
+++ b/app/who.html
@@ -21,7 +21,7 @@
 		<div class="meta row">
 			<div class="four columns offset-by-eight">
 				<div class="meta-content">
-					<p>The Right to Heal: Saturday, July 16th 2013</p>
+					<p>7pm Saturday, July 16th 2013</p>
 				</div>
 			</div>
 		</div>
@@ -67,14 +67,16 @@
 							</li>
 						</ul>
 					</div>
+				</div>
+				<div class="row">
 					<div class="twelve columns">
-						<h4>Who We Are</h4>
+						<p class="title">Who We Are</p>
 					</div>
 				</div>
 				<div class="row">
 					<div class="twelve columns">
-						<p class="long-text">
-							The Global Health Film Festival (GHFF) is hosted by the Institute for Global Orthopedics and Traumatology in collaboration with__________. Our team is comprised of x y and z.
+						<p class="long-text pad">
+						The Global Health Film Festival (GHFF) is hosted by the Institute for Global Orthopedics and Traumatology in collaboration with__________. Our team is comprised of x y and z.
 						</p>
 					</div>
 				</div>
@@ -85,7 +87,8 @@
 					</div>
 					<div class="nine columns">
 						<div class="partner-text">
-							<p class="strong long-text">Amber Caldwell</p>
+							<br>
+							<p class="name">Amber Caldwell</p>
 							<p class="long-text">
 								This is the description of Amber.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 							</p>
@@ -99,7 +102,8 @@
 					</div>
 					<div class="nine columns">
 						<div class="partner-text">
-							<p class="strong long-text">Jaymie Henry-Ang:</p>
+							<br>
+							<p class="name">Jaymie Henry-Ang:</p>
 							<p class="long-text">
 								This is the description of partner Jaymie.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 							</p>
@@ -113,7 +117,8 @@
 					</div>
 					<div class="nine columns">
 						<div class="partner-text">
-							<p class="strong long-text">Andrew Pedkte</p>
+							<br>
+							<p class="name">Andrew Pedkte</p>
 							<p class="long-text">
 								This is the description of partner Andrew.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 							</p>
@@ -127,7 +132,8 @@
 					</div>
 					<div class="nine columns">
 						<div class="partner-text">
-							<p class="strong long-text">Stephanie Tomasky</p>
+							<br>
+							<p class="name">Stephanie Tomasky</p>
 							<p class="long-text">
 								This is the description of partner Stephanie.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 							</p>
