--- a/app/why.html
+++ b/app/why.html
@@ -68,54 +68,59 @@
 						</ul>
 					</div>
 				</div>
-			<div class="row">
+				<div class="row">
 					<div class="twelve columns">
-						<p class="long-text">
-						The Global Health Film Festival is an attempt to bring neglected global health issues to light.  The films and organizations supporting the festival are dedicated to awareness, advocacy and activism to ensure that the below issues have platforms on the greater health agenda locally and globally:
+						<p class="title">Why We Are Here</p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="twelve columns">
+						<p class="long-text pad">
+							The Global Health Film Festival is an attempt to bring neglected global health issues to light.  The films and organizations supporting the festival are dedicated to awareness, advocacy and activism to ensure that the below issues have platforms on the greater health agenda locally and globally:
 						</p>
 					</div>
-			</div>
-					<div class="row vert-pad">
-						<div class="twelve columns">
-							<p class="strong long-text">Safe, effective surgery globally</p>
-							<p class="long-text">
-								Did you know XX% of the world die or are disabled due to lack of access to surgery
-							</p>
-						</div>
+				</div>
+				<div class="row vert-pad">
+					<div class="twelve columns">
+						<p class="name">Safe, effective surgery globally</p>
+						<p class="long-text">
+							Did you know XX% of the world die or are disabled due to lack of access to surgery
+						</p>
 					</div>
-					<div class="row">
-						<div class="twelve columns">
-							<p class="strong long-text ">Safe, clean and effective hospital systems</p>
-							<p class="long-text">
-								Did you know that in most developing countries the ratio of access to a functional hospital is XX per XX population, in comparison the hospital to population ration in San Francisco alone is XX per XX
-							</p>
-						</div>
+				</div>
+				<div class="row">
+					<div class="twelve columns">
+						<p class="name">Safe, clean and effective hospital systems</p>
+						<p class="long-text">
+							Did you know that in most developing countries the ratio of access to a functional hospital is XX per XX population, in comparison the hospital to population ration in San Francisco alone is XX per XX
+						</p>
 					</div>
-					<div class="row vert-pad">
-						<div class="twelve columns">
-							<p class="strong long-text">Access to rehabilitation and therapy</p>
-							<p class="long-text">
-								Did you know that XX% of amputees in developing countries have no access to wheelchairs, crutches or rehabilitation
-							</p>
-						</div>
+				</div>
+				<div class="row vert-pad">
+					<div class="twelve columns">
+						<p class="name">Access to rehabilitation and therapy</p>
+						<p class="long-text">
+							Did you know that XX% of amputees in developing countries have no access to wheelchairs, crutches or rehabilitation
+						</p>
 					</div>
-					<div class="row">
-						<div class="twelve columns">
-							<p class="strong long-text">Public policy and resource allocation for surgical systems</p>
-							<p class="long-text">
-								Did you know that Road Traffic Accidents account for XX% of deaths and disability globally yet only XX countries have established road traffic laws and regulations
-							</p>
-						</div>
+				</div>
+				<div class="row">
+					<div class="twelve columns">
+						<p class="name">Public policy and resource allocation for surgical systems</p>
+						<p class="long-text">
+							Did you know that Road Traffic Accidents account for XX% of deaths and disability globally yet only XX countries have established road traffic laws and regulations
+						</p>
 					</div>
-					<div class="row">
+				</div>
+				<div class="row">
 					<div class="twelve columns vert-pad">
-						<p class="long-text strong">
+						<p class="name">
 							Want to learn more and help us advocate for the festival?  Sign our petition in support of XXX: hyperlink
 						</p>
 					</div>
-					</div>
 				</div>
 			</div>
+		</div>
 		<script src="javascripts/jquery.js"></script>
 		<script src="javascripts/foundation.min.js"></script>
 		<script src="javascripts/app.js"></script>
