--- a/app/guidelines.html
+++ b/app/guidelines.html
@@ -8,10 +8,11 @@
 	<!-->
 	<html class="no-js" lang="en">
 		<!--<![endif]-->
+
 <head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
-		<title>GHFF-About</title>
+		<title>GHFF</title>
 		<link rel="stylesheet" href="stylesheets/foundation.css">
 		<link rel="stylesheet" href="stylesheets/app.css">
 		<script src="javascripts/modernizr.foundation.js"></script>
@@ -20,7 +21,7 @@
 		<div class="meta row">
 			<div class="four columns offset-by-eight">
 				<div class="meta-content">
-					<p>The Right to Heal: Saturday, July 16th 2013</p>
+					<p>7pm Saturday, July 16th 2013</p>
 				</div>
 			</div>
 		</div>
@@ -31,16 +32,16 @@
 			</div>
 			<div class="seven columns">
 				<ul class="nav">
-					<li class="nav-item">
+					<li class="nav-item ">
 						<a href="index.html">Home</a>
 					</li>
-					<li class="nav-item">
+					<li class="nav-item active">
 						<a href="about.html">About</a>
 					</li>
 					<li class="nav-item">
 						<a href="schedule.html">Schedule</a>
 					</li>
-					<li class="nav-item active">
+					<li class="nav-item">
 						<a href="submit.html">Submit A Film</a>
 					</li>
 					<li class="nav-item">
@@ -50,7 +51,7 @@
 			</div>
 		</div>
 
-		<div class="body row">
+				<div class="body row">
 			<div class="twelve columns content container">
 				<div class="row">
 					<div class="twelve columns">
@@ -77,19 +78,15 @@
 					</div>
 				</div>
 				<div class="row vert-pad">
-					<div class="sixcolumns half">
+					<div class="seven columns half">
 						<p class="strong half">
 							We are looking for 15-20 minute films.Project must fit GHFF's categories. We currently support films in the following categories with some examples:
 						</p>
 					</div>
-					<div class="six columns half">
-						<p class="submit">SUBMIT NOW</p>
-					</div>
 				</div>
 				<div class="row">
-					<div class="six columns">
-						<p class="small">Injuries</p>
-						<p class="small">Maternal health</p>
+					<div class="seven columns">
+						<p class="small">Maternal Health</p>
 						<p class="small">Child health/injuries (e.g congenital defects)</p>
 						<p class="small">Injuries</p>
 						<p class="small">Other essestial surgical conditions</p>
@@ -101,10 +98,6 @@
 						<p class="small">Ongoing social issue</p>
 						<p class="small">Potential for engagement</p>
 					</div>
-					<div class="six columns">
-						<p class="strong">Submission Materials</p>
-						<p>We highly encourage you to submit ALL materials online, including the film itself. However, we will not download film files: all online entries must be hosted by the filmmaker or a third party (ie, Vimeo.com). If online entry is not possible, entrants must submit 2 DVDs (any region, NTSC encouraged). Please DO NOT include ANY promotional materials in your submission.</p>
-					</div>
 				</div>
 				<div class="row">
 					<div class="twelve columns vert-pad">
@@ -114,59 +107,17 @@
 						</p>
 					</div>
 				</div>
-
 			</div>
 		</div>
 
-		<!--<div class="row">
-		<div class="twelve columns">
-			<p class="strong">Submission instructions</p>
-			<p>
-				The submission season for 2013 will be open through May 10, 2013. No films will be accepted outside this time period. All submissions must come through our online form (link below).
-			</p>
-			<p>
-				Before clicking on the link to fill out the submission form, please be prepared to provide the following:
-			</p>
+		<div class="footer row">
 			<div class="twelve columns">
-				<ol>
-					<li>Contact Information</li>
-					<li>Full film information including a short synopsis</li>
-					<li>A link to an online screener OR 2 DVDs</li>
-					<li>Acceptance of Rights and Releases</li>
-				</ol>
+				<div class="content">This is some footer content</div>
 			</div>
 		</div>
-	</div>
-	<h4>Submit Now - hyperlink to form</h4>
-	<p>
-		If you are unsure of whether or not you are ready to begin your submission, please read the detailed information below. Also check out our submission Frequently Asked Questions at this link.(HYPERLINK)
-	</p>
-	<div class="twelve columns"></div>
-	<p class="strong">Submission Materials</p>
-	<p>
-		We highly encourage you to submit ALL materials online, including the film itself. However, we will not download film files: all online entries must be hosted by the filmmaker or a third party (ie, Vimeo.com). If online entry is not possible, entrants must submit 2 DVDs (any region, NTSC encouraged). Please DO NOT include ANY promotional materials in your submission.
-	</p>
-	<p class="strong">Shipping Information</p>
-	<p>
-		If you chose to submit your film by mail you are responsible for all shipping charges to IGOT GHFF and for any customs clearances and/or associated fees and taxes. Entry materials will not be returned.
-	</p>
-	<h6>Send entries to:</h6>
-	<p>
-		IGOT Global Health Film Festival
-2550 23rd Street
-Building 9, 2nd Floor
-San Francisco, CA 94110
-Office: +01 (415) 206-4261
-	</p>
-	<div class="footer row">
-		<div class="twelve columns">
-			<div class="content">This is some footer content</div>
-			--!>
-		</div>
-	</div>
 
-	<script src="javascripts/jquery.js"></script>
-	<script src="javascripts/foundation.min.js"></script>
-	<script src="javascripts/app.js"></script>
+		<script src="javascripts/jquery.js"></script>
+		<script src="javascripts/foundation.min.js"></script>
+		<script src="javascripts/app.js"></script>
 </body>
-</html>
+	</html>
