--- a/app/index.html
+++ b/app/index.html
@@ -54,12 +54,12 @@
 	<div class="body row">
 		<div class="nine columns">
 			<div class="video">
-					<iframe src="http://player.vimeo.com/video/59388957" width="700" height="425" framexborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+					<iframe src="http://player.vimeo.com/video/59388957" width="675" height="425" framexborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 			</div>
 			</div>
 			<div class="three columns">
-				<div class="vert-pad"></div>
-				<p class="title">Global Health Film Festival</p>
+				<!-- <div class="vert-pad"></div> -->
+				<p class="title">Global Health<br/>Film Festival</p>
 				<br>
 				<p class="home-text"><span class="strong">'The Right to Heal' Premier</span>
 				<br>
